added oauth and jest
