# controllers/accessories.js
@@ -3,47 +3,22 @@ const ObjectId = require('mongodb').ObjectId;
 const { validationResult } = require('express-validator');
 
 const getAll = async (req, res) => {
+    //#swagger.tags=['Contacts']
     try {
-      const games = await mongodb
+      const accessories = await mongodb
         .getDatabase()
         .db()
-        .collection('games')
+        .collection('accessories')
         .find()
         .toArray();
   
       res.setHeader('Content-Type', 'application/json');
-      res.status(200).json(games);
+      res.status(200).json(accessories);
     } catch (err) {
-      res.status(500).json({ message: err.message || 'Failed to retrieve games.' });
+      res.status(500).json({ message: err.message || 'Failed to retrieve accessories.' });
     }
   };
   const getSingle = async (req, res) => {
-    const errors = validationResult(req);
-    if (!errors.isEmpty()) {
-      return res.status(422).json({ errors: errors.array() });
-    }
-  
-    try {
-      const userId = new ObjectId(req.params.id);
-      const game = await mongodb
-        .getDatabase()
-        .db()
-        .collection('games')
-        .findOne({ _id: userId });
-  
-      if (!game) {
-        return res.status(404).json({ message: 'Game not found' });
-      }
-  
-      res.setHeader('Content-Type', 'application/json');
-      res.status(200).json(game);
-    } catch (err) {
-      res.status(500).json({ message: err.message || 'Failed to fetch game' });
-    }
-  };
-  
-  // Create a new character
-  const createGame = async (req, res) => {
     //#swagger.tags=['Contacts']
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
@@ -51,19 +26,46 @@ const getAll = async (req, res) => {
     }
   
     try {
-      const newGame = {
+      const userId = new ObjectId(req.params.id);
+      const accessory = await mongodb
+        .getDatabase()
+        .db()
+        .collection('accessories')
+        .findOne({ _id: userId });
+  
+      if (!accessory) {
+        return res.status(404).json({ message: 'accessory not found' });
+      }
+  
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(accessory);
+    } catch (err) {
+      res.status(500).json({ message: err.message || 'Failed to fetch accessory' });
+    }
+  };
+  
+  // Create a new accessory
+  const createAcc = async (req, res) => {
+    //#swagger.tags=['Contacts']
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      return res.status(422).json({ errors: errors.array() });
+    }
+  
+    try {
+      const newAcc = {
+        brand: req.body.brand,
+        console: req.body.console,
+        classification: req.body.classification,
         name: req.body.name,
-        genre: req.body.genre,
-        releaseYear: req.body.releaseYear,
-        metacriticScore: req.body.metacriticScore,
         inventory: req.body.inventory
       };
   
       const response = await mongodb
         .getDatabase()
         .db()
-        .collection('games')
-        .insertOne(newGame);
+        .collection('accessories')
+        .insertOne(newAcc);
   
       if (response.acknowledged) {
         res.status(201).send();
@@ -71,12 +73,12 @@ const getAll = async (req, res) => {
         throw new Error('Insert not acknowledged');
       }
     } catch (err) {
-      res.status(500).json({ message: err.message || 'Failed to create game' });
+      res.status(500).json({ message: err.message || 'Failed to create accessory' });
     }
   };
   
-  // Update a game
-  const updateGame = async (req, res) => {
+  // Update a accessory
+  const updateAcc = async (req, res) => {
     //#swagger.tags=['Contacts']
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
@@ -85,32 +87,32 @@ const getAll = async (req, res) => {
   
     try {
       const userId = new ObjectId(req.params.id);
-      const game = {
+      const accessory = {
+        brand: req.body.brand,
+        console: req.body.console,
+        classification: req.body.classification,
         name: req.body.name,
-        genre: req.body.genre,
-        releaseYear: req.body.releaseYear,
-        metacriticScore: req.body.metacriticScore,
         inventory: req.body.inventory
       };
   
       const response = await mongodb
         .getDatabase()
         .db()
-        .collection('games')
-        .replaceOne({ _id: userId }, game);
+        .collection('accessories')
+        .replaceOne({ _id: userId }, accessory);
   
       if (response.modifiedCount > 0) {
         res.status(204).send();
       } else {
-        throw new Error('Game not updated');
+        throw new Error('accessory not updated');
       }
     } catch (err) {
-      res.status(500).json({ message: err.message || 'Failed to update game' });
+      res.status(500).json({ message: err.message || 'Failed to update accessory' });
     }
   };
   
-  // Delete a game
-  const deleteGame = async (req, res) => {
+  // Delete a accessory
+  const deleteAcc = async (req, res) => {
     //#swagger.tags=['Contacts']
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
@@ -122,17 +124,17 @@ const getAll = async (req, res) => {
       const response = await mongodb
         .getDatabase()
         .db()
-        .collection('games')
+        .collection('accessories')
         .deleteOne({ _id: userId });
   
       if (response.deletedCount > 0) {
         res.status(204).send();
       } else {
-        throw new Error('Game not deleted');
+        throw new Error('accessory not deleted');
       }
     } catch (err) {
-      res.status(500).json({ message: err.message || 'Failed to delete game' });
+      res.status(500).json({ message: err.message || 'Failed to delete accessory' });
     }
   };
 
-module.exports = { getAll, getSingle, createGame, updateGame, deleteGame };
+module.exports = { getAll, getSingle, createAcc, updateAcc, deleteAcc };
